<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/display"

        android:layout_width="match_parent"
        android:layout_height="161dp"
        android:layout_margin="10dp"
        android:background="#FFFFFF"
        android:padding="5dp"
        android:text="@string/display"
        android:textAlignment="textEnd"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="556dp"
        android:gravity="fill">


        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="559dp"
            android:layout_weight="1">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/ac"
                    android:layout_width="80dp"
                    android:layout_height="90sp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/otherkeys"
                    android:textColor="#FFFFFF"
                    android:text="@string/ac"
                    android:textSize="50sp"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_editor_absoluteY="16dp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/clean"
                    android:layout_width="80dp"
                    android:layout_height="90sp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/otherkeys"
                    android:textColor="#FFFFFF"
                    android:text="⌫"
                    android:textSize="50sp"
                    tools:layout_editor_absoluteX="111dp"
                    tools:layout_editor_absoluteY="16dp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/mod"
                    android:layout_width="80dp"
                    android:layout_height="90sp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/otherkeys"
                    android:textColor="#FFFFFF"
                    android:text="^"
                    android:textSize="50sp"
                    tools:layout_editor_absoluteX="315dp"
                    tools:layout_editor_absoluteY="114dp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/div"
                    android:layout_width="80dp"
                    android:layout_height="90sp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/otherkeys"
                    android:textColor="#FFFFFF"
                    android:text="@string/div"
                    android:textSize="50sp"
                    tools:layout_editor_absoluteX="315dp"
                    tools:layout_editor_absoluteY="15dp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/n9"
                    android:layout_width="80dp"
                    android:layout_height="90sp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/circle"
                    android:textColor="#FFFFFF"
                    android:text="9"
                    android:textSize="50sp"
                    tools:layout_editor_absoluteX="315dp"
                    tools:layout_editor_absoluteY="403dp" />

                <androidx.appcompat.widget.AppCompatButton

                    android:id="@+id/n8"
                    android:layout_width="80dp"
                    android:layout_height="90sp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/circle"
                    android:textColor="#FFFFFF"
                    android:text="8"
                    android:textSize="50sp"
                    tools:layout_editor_absoluteX="315dp"
                    tools:layout_editor_absoluteY="403dp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/n7"
                    android:layout_width="80dp"
                    android:layout_height="90sp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/circle"
                    android:textColor="#FFFFFF"
                    android:text="7"
                    android:textSize="50sp"
                    tools:layout_editor_absoluteX="315dp"
                    tools:layout_editor_absoluteY="403dp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/mul"
                    android:layout_width="80dp"
                    android:layout_height="90sp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/otherkeys"
                    android:textColor="#FFFFFF"
                    android:text="@string/mul"
                    android:textSize="50sp"
                    tools:layout_editor_absoluteX="208dp"
                    tools:layout_editor_absoluteY="16dp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/n6"
                    android:layout_width="80dp"
                    android:layout_height="90sp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/circle"
                    android:textColor="#FFFFFF"
                    android:text="6"
                    android:textSize="50sp"
                    tools:layout_editor_absoluteX="315dp"
                    tools:layout_editor_absoluteY="403dp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/n5"
                    android:layout_width="80dp"
                    android:layout_height="90sp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/circle"
                    android:textColor="#FFFFFF"
                    android:text="5"
                    android:textSize="50sp"
                    tools:layout_editor_absoluteX="315dp"
                    tools:layout_editor_absoluteY="403dp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/n4"
                    android:layout_width="80dp"
                    android:layout_height="90sp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/circle"
                    android:textColor="#FFFFFF"
                    android:text="4"
                    android:textSize="50sp"
                    tools:layout_editor_absoluteX="315dp"
                    tools:layout_editor_absoluteY="403dp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/sub"
                    android:layout_width="80dp"
                    android:layout_height="90sp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/otherkeys"
                    android:textColor="#FFFFFF"
                    android:text="@string/sub"
                    android:textSize="50sp"
                    tools:layout_editor_absoluteX="315dp"
                    tools:layout_editor_absoluteY="208dp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/n3"
                    android:layout_width="80dp"
                    android:layout_height="90sp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/circle"
                    android:textColor="#FFFFFF"
                    android:text="3"
                    android:textSize="50sp"
                    tools:layout_editor_absoluteX="315dp"
                    tools:layout_editor_absoluteY="403dp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/n2"
                    android:layout_width="80dp"
                    android:layout_height="90sp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/circle"
                    android:textColor="#FFFFFF"
                    android:text="2"
                    android:textSize="50sp"
                    tools:layout_editor_absoluteX="315dp"
                    tools:layout_editor_absoluteY="403dp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/n1"
                    android:layout_width="80dp"
                    android:layout_height="90sp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/circle"
                    android:textColor="#FFFFFF"
                    android:text="1"
                    android:textSize="50sp"
                    tools:layout_editor_absoluteX="315dp"
                    tools:layout_editor_absoluteY="403dp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/add"
                    android:layout_width="80dp"
                    android:layout_height="90sp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/otherkeys"
                    android:textColor="#FFFFFF"
                    android:text="@string/add"
                    android:textSize="50sp"
                    tools:layout_editor_absoluteX="315dp"
                    tools:layout_editor_absoluteY="305dp" />
            </TableRow>

            <TableRow

                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/per"
                    android:layout_width="80dp"
                    android:layout_height="90sp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/otherkeys"
                    android:textColor="#FFFFFF"
                    android:text="( )"
                    android:textSize="50sp"
                    tools:layout_editor_absoluteX="315dp"
                    tools:layout_editor_absoluteY="403dp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/n0"
                    android:layout_width="80dp"
                    android:layout_height="90sp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/circle"
                    android:textColor="#FFFFFF"
                    android:text="0"
                    android:textSize="50sp"
                    tools:layout_editor_absoluteX="315dp"
                    tools:layout_editor_absoluteY="403dp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/dott"
                    android:layout_width="80dp"
                    android:layout_height="90sp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/otherkeys"
                    android:textColor="#FFFFFF"
                    android:text="."
                    android:textSize="50sp"
                    tools:layout_editor_absoluteX="315dp"
                    tools:layout_editor_absoluteY="403dp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/eq"
                    android:layout_width="80dp"
                    android:layout_height="90sp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/otherkeys"
                    android:textColor="#FFFFFF"
                    android:text="="
                    android:textSize="50sp"
                    tools:layout_editor_absoluteX="315dp"
                    tools:layout_editor_absoluteY="403dp" />
            </TableRow>

        </TableLayout>
    </LinearLayout>

<TableLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

</TableLayout>



</LinearLayout>